feat: improve UI, add user management, restrict user deletion, and make frontend responsive 📱🖥️